--- a/react-native-app/src/i18n/ja.json
+++ b/react-native-app/src/i18n/ja.json
@@ -9,6 +9,7 @@
     "posts": "投稿",
     "following": "フォロー中",
     "follower": "フォロワー",
+    "follow": "フォローする",
     "message": "メッセージ"
   },
   "label": {
