--- a/react-native-app/src/i18n/ja.json
+++ b/react-native-app/src/i18n/ja.json
@@ -5,12 +5,16 @@
     "introduction": "プロフィールを入力しましょう！150文字まで入力できます。"
   },
   "button": {
-    "edit": "プロフィール編集",
+    "profileEdit": "プロフィール編集",
     "posts": "投稿",
     "following": "フォロー中",
     "follower": "フォロワー",
     "follow": "フォローする",
-    "message": "メッセージ"
+    "message": "メッセージ",
+    "delete": "削除する",
+    "edit": "編集",
+    "linkCopy": "リンクをコピー",
+    "cancel": "キャンセル"
   },
   "label": {
     "id": "ID",
@@ -24,7 +28,9 @@
     "facebook": "Facebook",
     "web": "Web",
     "trend": "トレンド",
-    "search": "検索"
+    "search": "検索",
+    "nice": "いいね：",
+    "comment": "コメント："
   },
   "title": {
     "snsTitle": "SNS",
